[gd_scene load_steps=8 format=2]

[ext_resource path="res://components/Component.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/Bus.gd" type="Script" id=2]
[ext_resource path="res://components/sprites/chip_case.png" type="Texture" id=3]
[ext_resource path="res://gui/SelectionLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/BusEnd.gd" type="Script" id=5]
[ext_resource path="res://components/sprites/tube.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Bus" instance=ExtResource( 1 )]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
z_index = 3
script = ExtResource( 2 )

[node name="Label" parent="." index="0"]
text = "Bus"

[node name="Sprite" type="Sprite" parent="." index="5"]
texture = ExtResource( 3 )

[node name="BusEnd" type="Node2D" parent="." index="6"]
position = Vector2( 90, 0 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="BusEnd" index="0"]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="BusEnd" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BusEnd/Area2D" index="0"]
shape = SubResource( 2 )

[node name="SelectionLine" parent="BusEnd" index="2" instance=ExtResource( 4 )]
visible = true

[node name="Line2D" type="Line2D" parent="BusEnd" index="3"]
points = PoolVector2Array( -28, -20, -62, -20 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1

[node name="Line2D2" type="Line2D" parent="BusEnd" index="4"]
points = PoolVector2Array( -28, -10, -62, -10 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1

[node name="Line2D3" type="Line2D" parent="BusEnd" index="5"]
points = PoolVector2Array( -28, 0, -62, 0 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1

[node name="Line2D4" type="Line2D" parent="BusEnd" index="6"]
points = PoolVector2Array( -28, 10, -62, 10 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1

[node name="Line2D5" type="Line2D" parent="BusEnd" index="7"]
points = PoolVector2Array( -28, 20, -62, 20 )
width = 12.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 6 )
texture_mode = 1
